[gd_scene load_steps=4 format=3 uid="uid://bdvux3ufglckk"]

[ext_resource type="Script" path="res://scripts/chat.gd" id="1_5lp2x"]
[ext_resource type="Script" path="res://scripts/http_request.gd" id="2_tkvc6"]
[ext_resource type="Theme" uid="uid://b54cr0s1ueyj" path="res://button_theme.tres" id="3_eqhel"]

[node name="Chat" type="Node2D"]
process_mode = 3
z_index = 10
position = Vector2(-1, 0)
script = ExtResource("1_5lp2x")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 0)

[node name="Send" type="Button" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = 558.0
offset_top = 409.0
offset_right = 754.0
offset_bottom = 473.0
text = "SEND"

[node name="TextEdit" type="TextEdit" parent="."]
custom_minimum_size = Vector2(400, 500)
offset_left = -736.0
offset_top = -402.0
offset_right = 754.0
offset_bottom = 401.0
size_flags_horizontal = 3
size_flags_vertical = 3
editable = false
wrap_mode = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource("2_tkvc6")

[node name="AnswerEdit" type="TextEdit" parent="."]
offset_left = -736.0
offset_top = 409.0
offset_right = 549.0
offset_bottom = 473.0
wrap_mode = 1

[node name="ResultButton" type="Button" parent="."]
offset_left = 440.0
offset_top = -400.0
offset_right = 750.0
offset_bottom = -301.0
theme = ExtResource("3_eqhel")
theme_override_font_sizes/font_size = 33
text = "Continue"

[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="ResultButton" to="." method="resume_ai"]
